updated social links

--- a/green/index.html
+++ b/green/index.html
@@ -28,7 +28,7 @@
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
 							<li>
-								<a href="About Me.html" class="">About Me</a>
+								<a href="About Me" class="">About Me</a>
 								<!-- <ul>
 									<li><a href="#">Option One</a></li>
 									<li><a href="#">Option Two</a></li>
@@ -44,8 +44,8 @@
 									</li>
 								</ul> -->
 							</li>
-							<li><a href="Projects.html">Projects</a></li>
-							<li><a href="Contact.html">Contact</a></li>
+							<li><a href="Projects">Projects</a></li>
+							<li><a href="Contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -296,10 +296,10 @@
 						</div>
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon solid alt fa-github"><span class="label">Phone</span></a></li>
-								<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/BlkDevJockey" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://linkedin.com/in/landenturner" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/DevJockey90" class="icon brands alt fa-github"><span class="label">Phone</span></a></li>
+								
 							</ul>
 						</footer>
 					</section>
