added scroll behavior/updated page links

--- a/green/index.html
+++ b/green/index.html
@@ -28,7 +28,7 @@
 						<ul>
 							<li class="current"><a href="index.html">Home</a></li>
 							<li>
-								<a href="About Me" class="">About Me</a>
+								<a href="#about" class="">About Me</a>
 								<!-- <ul>
 									<li><a href="#">Option One</a></li>
 									<li><a href="#">Option Two</a></li>
@@ -44,8 +44,8 @@
 									</li>
 								</ul> -->
 							</li>
-							<li><a href="Projects">Projects</a></li>
-							<li><a href="Contact">Contact</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -69,7 +69,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="main style1">
+					<section id="about" class="main style1">
 						<header class="small">
 							<h2>ABOUT ME</h2>
 							<p>Hello, I'm Landen. I worked in the automotive industry for 7 years as a quality inspector. But there was something missing, 
@@ -195,7 +195,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="main style1">
+					<section id="projects" class="main style1">
 						<header class="small">
 							<h2>PROJECTS</h2>
 							<p>Ac mollis metus. Nulla tristique urna sit amet sapien placerat euismod. Suspendisse eget viverra ex. Nunc vel justo lectus. Suspendisse potenti. Phasellus turpis augue, fringilla ut nisi vel placerat.</p>
@@ -270,7 +270,7 @@
 					</section>
 
 				<!-- Section -->
-					<section class="main style2">
+					<section id="contact" class="main style2">
 						<header class="small">
 							<h2>CONTACT</h2>
 							<p>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
