--- a/green/index.html
+++ b/green/index.html
@@ -26,7 +26,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Home</a></li>
+							<li class="current"><a href="#home">Home</a></li>
 							<li>
 								<a href="#about" class="">About Me</a>
 								<!-- <ul>
@@ -55,7 +55,7 @@
 			<div id="wrapper">
 
 				<!-- Banner -->
-					<section class="banner">
+					<section id="home" class="banner">
 						<div class="image" data-position="right">
 							<img src="images/ProfileBanner 2.png" alt="" />
 						</div>
@@ -203,6 +203,36 @@
 						<div class="inner">
 							<div class="posts">
 								<article>
+									<a href="#" class="image filtered"><img src="images/FPV.jpg" alt="" /></a>
+									<h3><strong>First Person Drone Co.</strong></h3>
+									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button small next">View Code</a></li>
+										<li><a href="https://fpvdash.netlify.app/" class="button small next">Live Demo</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<a href="#" class="image filtered"><img src="images/pic01.jpg" alt="" /></a>
+									<h3><strong>Security Password 1</strong></h3>
+									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button small next">View Code</a></li>
+										<li><a href="#" class="button small next">Live Demo</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<a href="#" class="image filtered"><img src="images/pic01.jpg" alt="" /></a>
+									<h3><strong>Every Dollar Expense Tracker</strong></h3>
+									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button small next">View Code</a></li>
+										<li><a href="#" class="button small next">Live Demo</a></li>
+									</ul>
+								</article>
+
+								<!-- <article>
 									<a href="#" class="image filtered"><img src="images/pic01.jpg" alt="" /></a>
 									<p><strong>Magna feugiat etiam</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
 									<ul class="actions special">
@@ -265,7 +295,7 @@
 										<li><a href="#" class="button small next">Details</a></li>
 									</ul>
 								</article>
-							</div>
+							</div> -->
 						</div>
 					</section>
 
