added project links

--- a/green/index.html
+++ b/green/index.html
@@ -205,7 +205,9 @@
 								<article>
 									<a href="#" class="image filtered"><img src="images/FPV.jpg" alt="" /></a>
 									<h3><strong>First Person Drone Co.</strong></h3>
-									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<p><strong>First Person Drone Co.</strong>Admin users can track previous and current
+										sales, expenses, and total revenue. Dashboard tracks product numbers, payment status and
+										tracking information. </p>
 									<ul class="actions special">
 										<li><a href="#" class="button small next">View Code</a></li>
 										<li><a href="https://fpvdash.netlify.app/" class="button small next">Live Demo</a></li>
@@ -213,19 +215,23 @@
 								</article>
 
 								<article>
-									<a href="#" class="image filtered"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image filtered"><img src="images/Password Generator .jpg" alt="" /></a>
 									<h3><strong>Security Password 1</strong></h3>
-									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<p><strong>First Person Drone Co.</strong> Users can generate secure, unique
+										passwords on demand for applications and websites. Stores data via localStorage, available via
+										login.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button small next">View Code</a></li>
-										<li><a href="#" class="button small next">Live Demo</a></li>
+										<li><a href="https://github.com/DevJockey90/Password_Generator.git" class="button small next">View Code</a></li>
+										<li><a href="https://securitypassword1.netlify.app/" class="button small next">Live Demo</a></li>
 									</ul>
 								</article>
 
 								<article>
 									<a href="#" class="image filtered"><img src="images/pic01.jpg" alt="" /></a>
 									<h3><strong>Every Dollar Expense Tracker</strong></h3>
-									<p><strong>First Person Drone Co.</strong> ipsum dolor tempus amet, magna consectetur. Fusce eu lacus imperdiet.</p>
+									<p><strong>First Person Drone Co.</strong> Allows users to automatically or
+										manually track expenses in designated categories. Tracks miscellaneous spending and
+										provides an analyzed report at month end for each category. </p>
 									<ul class="actions special">
 										<li><a href="#" class="button small next">View Code</a></li>
 										<li><a href="#" class="button small next">Live Demo</a></li>
