--- a/green/assets/index.html
+++ b/green/assets/index.html
@@ -5,7 +5,7 @@
 		<title>Landen Turner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="./css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 		
 		
@@ -40,7 +40,7 @@
 				<!-- Banner -->
 					<section id="home" class="banner">
 						<div class="image" data-position="right">
-							<img src="images/NewBanner.jpg" alt="" />
+							<img src="../images/NewBanner.jpg" alt="" />
 						</div>
 						<!-- <div class="content">
 							<h1>Hi, I'm Landen <br />
@@ -150,7 +150,7 @@
 						<div class="inner">
 							<div class="posts">
 								<article>
-									<a href="#" class="image filtered"><img src="images/FPV.jpg" alt="" /></a>
+									<a href="#" class="image filtered"><img src="../images/FPV.jpg" alt="" /></a>
 									<h3><strong>First Person Drone Co.</strong></h3>
 									<p>Admin users can track previous and current
 										sales, expenses, and total revenue. Dashboard tracks product numbers, payment status and
@@ -162,7 +162,7 @@
 								</article>
 
 								<article>
-									<a href="#" class="image filtered"><img src="images/Password Generator .jpg" alt="" /></a>
+									<a href="#" class="image filtered"><img src="../images/Password Generator .jpg" alt="" /></a>
 									<h3><strong>Security Password 1</strong></h3>
 									<p>Users can generate secure, unique
 										passwords on demand for applications and websites. Stores data via localStorage, available via
@@ -174,7 +174,7 @@
 								</article>
 
 								<article>
-									<a href="#" class="image filtered"><img src="images/Expense Tracker.jpg" alt="" /></a>
+									<a href="#" class="image filtered"><img src="../images/Expense Tracker.jpg" alt="" /></a>
 									<h3><strong>Every Dollar Expense Tracker</strong></h3>
 									<p>Allows users to track expenses in designated categories. Tracks miscellaneous spending and
 										provides an analyzed report at month end for each category. </p>
@@ -230,12 +230,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="./js/jquery.min.js"></script>
+			<script src="./js/jquery.dropotron.min.js"></script>
+			<script src="./js/browser.min.js"></script>
+			<script src="./js/breakpoints.min.js"></script>
+			<script src="./js/util.js"></script>
+			<script src="./js/main.js"></script>
 
 	</body>
 </html>
